Fixed the visiblity issue on non-Mac platforms.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,3 +69,6 @@
 body {
   padding-top: 50px;
 }
+select {
+  color: black;
+}
